Added feature flag in the Cargo.toml for 256-column-tables

--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -40,6 +40,7 @@ mysql = []
 32-column-tables = []
 64-column-tables = ["32-column-tables"]
 128-column-tables = ["64-column-tables"]
+256-column-tables = ["128-column-tables"]
 without-deprecated = []
 with-deprecated = []
 r2d2 = []
