Added 128-column-tables feature to main cargo toml and to CI

--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -78,6 +78,7 @@ huge-tables = ["64-column-tables"]
 32-column-tables = ["diesel_derives/32-column-tables"]
 64-column-tables = ["32-column-tables", "diesel_derives/64-column-tables"]
 128-column-tables = ["64-column-tables", "diesel_derives/128-column-tables"]
+256-column-tables = ["128-column-tables", "diesel_derives/256-column-tables"]
 postgres = ["dep:pq-sys", "postgres_backend"]
 sqlite = ["dep:libsqlite3-sys", "dep:sqlite-wasm-rs", "diesel_derives/sqlite", "time?/formatting", "time?/parsing"]
 mysql = ["dep:mysqlclient-sys", "dep:url", "dep:percent-encoding", "dep:bitflags", "mysql_backend"]
