--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -21,6 +21,7 @@ tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
 rusqlite = { version = "0.32", optional = true }
 rust_postgres = { version = "0.19.7", optional = true, package = "postgres" }
 tokio_postgres = { version = "0.7.10", optional = true, package = "tokio-postgres" }
+rand_chacha = { features = ["os_rng"], optional = true, version = "0.9" }
 rust_mysql = { version = "25.0", optional = true, package = "mysql" }
 rustorm = { version = "0.20", optional = true }
 rustorm_dao = { version = "0.20", optional = true }
@@ -33,7 +34,7 @@ futures-util = { version = "0.3", optional = true }
 diesel-async = { version = "0.5.0", optional = true, default-features = false }
 criterion-perf-events = { version = "0.4", optional = true }
 perfcnt = { version = "0.8", optional = true }
-wtx = { default-features = false, features = ["optimization", "postgres", "std", "tokio"], optional = true, version = "0.26" }
+wtx = { default-features = false, features = ["mysql", "optimization", "postgres", "rand_chacha", "std", "tokio"], optional = true, version = "0.28" }
 
 [dependencies.diesel]
 path = "../diesel"
