--- a/diesel_tests/Cargo.toml
+++ b/diesel_tests/Cargo.toml
@@ -21,7 +21,7 @@ ipnet = { version = "2.5.0" }
 ipnetwork = ">=0.12.2, <0.22.0"
 bigdecimal = ">= 0.0.13, < 0.5.0"
 libsqlite3-sys = { workspace = true, optional = true }
-rand = "0.8.4"
+rand = "0.9.0"
 pq-sys = { workspace = true, optional = true }
 pq-src = { version = "0.3", optional = true }
 mysqlclient-sys = { workspace = true, optional = true }
@@ -30,7 +30,8 @@ diesel_test_helper = { path = "../diesel_test_helper" }
 
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
 # Something is dependent on it, so we use feature to override it.
-getrandom = { version = "0.2", features = ["js"] }
+getrandom = { version = "0.3", features = ["wasm_js"] }
+getrandom_02 = { version = "0.2", package = "getrandom", features = ["js"] }
 wasm-bindgen-test = "0.3.49"
 sqlite-wasm-rs = { version = ">=0.3.0, <0.4.0", default-features = false, features = ["bundled"] }
 
