added a comment in the .env.sample file for the limitations in PG_EXAMPLE_DATABASE_URL

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
 # The database to use when testing against Postgres.
 PG_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/diesel_test
 # The database to use when running the Postgres examples during testing.
+# Note: This should be a Postgres database url only. If you specify connection parameters (like host) separately 
+# in the configuration, it may cause parsing errors due to limitations in the 'url' crate. 
 PG_EXAMPLE_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/diesel_example
 
 # The database to use when testing against MySQL.
