--- a/diesel_cli/tests/print_schema/print_schema_domain_types/diesel.toml
+++ b/diesel_cli/tests/print_schema/print_schema_domain_types/diesel.toml
@@ -1,3 +1,4 @@
 [print_schema]
 file = "src/schema.rs"
 domains_as_custom_types = ["int", "longtext"]
+custom_type_derives = ["diesel::query_builder::QueryId", "Clone"]
