Setup cargo-semver-checks
This commit sets up a xtask for cargo-semver-checks and integrates it in
our CI. It also fixes 2 instances of reported breakage. With that there
are still 3 more instances reported. I believe two of them are false
positives (The `Downcast` super trait and the `IntoArrayExpression`
trait message). The third one is a "real" breakage, but I would
nevertheless say that this will likely not affect anyone as I do not see
any reasonable way to to do something with a trait object there at all.

I'm still not sure what's the correct way to supress such errors only at
specific locations.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -502,3 +502,17 @@ jobs:
         run: cargo +1.84.0 minimal-versions check -p diesel_migrations --all-features
       - name: Check diesel_cli
         run: cargo +1.84.0 minimal-versions check -p diesel_cli --features "default sqlite-bundled"
+
+  Semver-Checks:
+    name: Run Cargo Semver-Checks
+    runs-on: ubuntu-latest
+    needs: [rustfmt_and_clippy]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-semver-checks
+      - name: Run cargo semver-checks
+        run: |
+          cargo xtask semver-checks
