--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -9,7 +9,7 @@ homepage = "https://diesel.rs"
 repository = "https://github.com/diesel-rs/diesel"
 keywords = ["orm", "database", "sql"]
 categories = ["database"]
-edition = "2021"
+edition.workspace = true
 rust-version.workspace = true
 include = [
     "src/**/*.rs",
