--- a/examples/sqlite/all_about_inserts/Cargo.toml
+++ b/examples/sqlite/all_about_inserts/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 publish = false
 
 [dependencies]
-diesel = { version = "2.2.0", path = "../../../diesel", features = ["sqlite", "chrono"] }
+diesel = { version = "2.2.0", path = "../../../diesel", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
