--- a/diesel_tests/Cargo.toml
+++ b/diesel_tests/Cargo.toml
@@ -36,7 +36,7 @@ wasm-bindgen-test = "0.3.49"
 sqlite-wasm-rs = { version = ">=0.3.4, <0.4.0", default-features = false, features = ["bundled"] }
 
 [features]
-default = ["postgres"]
+default = []
 unstable = ["diesel/unstable"]
 postgres = ["diesel/postgres"]
 sqlite = ["diesel/sqlite"]
