--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -17,6 +17,7 @@ quote = "1.0.9"
 proc-macro2 = "1.0.27"
 diesel_table_macro_syntax = {version = "0.2", path = "../diesel_table_macro_syntax"}
 dsl_auto_type = { version = "0.1", path = "../dsl_auto_type" }
+darling = "0.20.0"
 
 [dev-dependencies]
 cfg-if = "1"
