--- a/diesel_tests/Cargo.toml
+++ b/diesel_tests/Cargo.toml
@@ -23,7 +23,7 @@ bigdecimal = ">= 0.0.13, < 0.5.0"
 rand = "0.8.4"
 libsqlite3-sys = { workspace = true, optional = true }
 pq-sys = { version = ">=0.6, <0.8", optional = true }
-pq-src = { version = "0.3", optional = true }
+pq-src = { version = ">=0.1, <0.4", optional = true }
 mysqlclient-sys = { version = "0.4", optional = true }
 mysqlclient-src = { version = "0.1.0", optional = true }
 
