--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -7,9 +7,9 @@ documentation = "https://diesel.rs/guides/"
 homepage = "https://diesel.rs"
 repository = "https://github.com/diesel-rs/diesel/"
 autotests = false
-include.workspace = true
 rust-version.workspace = true
 edition = "2021"
+include = ["src/*.rs", "src/deprecated/*.rs", "src/parsers/*.rs", "LICENSE-*", "README.md"]
 
 [dependencies]
 syn = { version = "2.0", features = ["derive", "fold", "full"] }
@@ -21,6 +21,8 @@ dsl_auto_type = { version = "0.1", path = "../dsl_auto_type" }
 [dev-dependencies]
 cfg-if = "1"
 dotenvy = "0.15"
+insta = "1.21"
+prettyplease = "0.2"
 
 [dev-dependencies.diesel]
 path = "../diesel"
