Reduce toml features

--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -42,7 +42,7 @@ clap_complete = "4"
 dotenvy = "0.15"
 heck = "0.5.0"
 serde = { version = "1.0.193", features = ["derive", "std"] }
-toml = "0.9"
+toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
 url = "2.2.2"
 libsqlite3-sys = { workspace = true, optional = true }
 pq-sys = { workspace = true, optional = true }
