--- a/diesel_migrations/migrations_internals/Cargo.toml
+++ b/diesel_migrations/migrations_internals/Cargo.toml
@@ -12,4 +12,4 @@ keywords = ["diesel", "internal"]
 
 [dependencies]
 serde = {version = "1.0.0", features = ["derive"]}
-toml = "0.9"
+toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
