Rename diesel to juspay_diesel so we can package it in cargo

--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "diesel"
+name = "juspay_diesel"
 version = "2.2.4"
 license = "MIT OR Apache-2.0"
 description = "A safe, extensible ORM and Query Builder for PostgreSQL, SQLite, and MySQL"
