--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -61,6 +61,7 @@ similar-asserts = "1.6.0"
 [dependencies.diesel]
 version = "~2.2.0"
 path = "../diesel"
+package = "juspay_diesel"
 default-features = false
 
 [dependencies.diesel_migrations]
