--- a/diesel_migrations/Cargo.toml
+++ b/diesel_migrations/Cargo.toml
@@ -27,6 +27,7 @@ tempfile = "3.2"
 [dependencies.diesel]
 version = "~2.2.0"
 path = "../diesel"
+package = "juspay_diesel"
 default-features = false
 
 [features]
