--- a/examples/mysql/getting_started_step_1/Cargo.toml
+++ b/examples/mysql/getting_started_step_1/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 publish = false
 
 [dependencies]
-diesel = { version = "2.2.0", path = "../../../diesel", features = ["mysql"] }
+diesel = { version = "2.2.0", path = "../../../diesel", package = "juspay_diesel", features = ["mysql"] }
 mysqlclient-sys = { workspace = true, features = ["bundled"] }
 dotenvy = "0.15"
 
