--- a/examples/postgres/custom_arrays/Cargo.toml
+++ b/examples/postgres/custom_arrays/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 publish = false
 
 [dependencies]
-diesel = { path = "../../../diesel", version = "2.2.0", default-features = false, features = ["postgres", "r2d2"] }
+diesel = { path = "../../../diesel", version = "2.2.0", package = "juspay_diesel", default-features = false, features = ["postgres", "r2d2"] }
 diesel_migrations = { path = "../../../diesel_migrations", version = "2.2.0", default-features = false, features = ["postgres"] }
 pq-sys = { workspace = true, features = ["bundled"] }
 openssl-sys = { workspace = true, features = ["vendored"] }
