--- a/examples/postgres/custom_types/Cargo.toml
+++ b/examples/postgres/custom_types/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 publish = false
 
 [dependencies]
-diesel = { path = "../../../diesel", version = "2.2.0", features = ["postgres"] }
+diesel = { path = "../../../diesel", version = "2.2.0",package = "juspay_diesel", features = ["postgres"] }
 pq-sys = { workspace = true, features = ["bundled"] }
 openssl-sys = { workspace = true, features = ["vendored"] }
 
