--- a/examples/postgres/relations/Cargo.toml
+++ b/examples/postgres/relations/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = { version = "2.2.0", features = ["postgres"], path = "../../../diesel" }
+diesel = { version = "2.2.0", features = ["postgres"],package = "juspay_diesel", path = "../../../diesel" }
 pq-sys = { workspace = true, features = ["bundled"] }
 openssl-sys = { workspace = true, features = ["vendored"] }
 dotenvy = "0.15.6"
