--- a/examples/sqlite/getting_started_step_3/Cargo.toml
+++ b/examples/sqlite/getting_started_step_3/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace = true
 publish = false
 
 [dependencies]
-diesel = { version = "2.2.0", path = "../../../diesel", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
+diesel = { version = "2.2.0", path = "../../../diesel",package = "juspay_diesel", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
 libsqlite3-sys = { workspace = true, features = ["bundled"] }
 dotenvy = "0.15"
 
