--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build documentation
         env:
           RUSTFLAGS: "--cfg docsrs"
-          RUSTDOCFLAGS: "--cfg docsrs"
+          RUSTDOCFLAGS: "--cfg docsrs  -Z unstable-options --generate-link-to-definition"
         run: cargo +nightly doc --manifest-path diesel/Cargo.toml --features "postgres sqlite mysql extras i-implement-a-third-party-backend-and-opt-into-breaking-changes" --workspace
 
       - name: Publish documentation
