--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/diesel-rs/diesel/"
 autotests = false
 rust-version.workspace = true
 edition = "2021"
-include = ["src/*.rs", "src/deprecated/*.rs", "src/parsers/*.rs", "LICENSE-*", "README.md"]
+include = ["src/**/*.rs", "src/tests/snapshots/*", "LICENSE-*", "README.md"]
 
 [dependencies]
 syn = { version = "2.0", features = ["derive", "fold", "full"] }
