Add ToSql Numeric support for SQLite MultiConn
When trying to convert Vaultwarden to use the MultiConnection feature, I bumped into an issue with Numeric/BigDecimal for SQLite.
This PR should fix this issue by adding the `ToSql` impl.

Also added a test for both single and multi connection.

Fixes #4735

Signed-off-by: BlackDex <black.dex@gmail.com>

--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -85,7 +85,7 @@ without-deprecated = ["diesel_derives/without-deprecated"]
 with-deprecated = ["diesel_derives/with-deprecated"]
 network-address = ["dep:ipnetwork", "dep:libc"]
 ipnet-address = ["dep:ipnet", "dep:libc"]
-numeric = ["dep:num-bigint", "dep:bigdecimal", "dep:num-traits", "dep:num-integer"]
+numeric = ["dep:num-bigint", "dep:bigdecimal", "dep:num-traits", "dep:num-integer", "diesel_derives/numeric"]
 postgres_backend = ["diesel_derives/postgres", "dep:bitflags", "dep:byteorder", "dep:itoa"]
 mysql_backend = ["diesel_derives/mysql", "dep:byteorder"]
 returning_clauses_for_sqlite_3_35 = []
