Fix diesel_derives compilation with syn 2.0
Add 'parsing' feature to syn dependency to enable require_ident() method.

The require_ident() method is gated behind the 'parsing' feature flag in syn 2.0,
but diesel_derives was not enabling this feature, causing compilation errors.

This fixes the compatibility issue with newer versions of syn.

--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 include = ["src/**/*.rs", "src/tests/snapshots/*", "LICENSE-*", "README.md", "build.rs"]
 
 [dependencies]
-syn = { version = "2.0", features = ["derive", "fold", "full"] }
+syn = { version = "2.0", features = ["derive", "fold", "full", "parsing"] }
 quote = "1.0.9"
 proc-macro2 = "1.0.27"
 diesel_table_macro_syntax = {version = "0.3", path = "../diesel_table_macro_syntax"}
