Artifact attestation + updates for actions
This commit enables githubs artifact attestation for the binaries we
build via cargo-dist, updates the checkout action to checkout@v5 and
tweaks the dependabot settings.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,16 @@
 version: 2
 updates:
+  - package-ecosystem: "github-actions"
+    reviewers:
+      - "diesel/reviewers"
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "rust-toolchain"
+    reviewers:
+      - "diesel/reviewers"
+    schedule:
+      interval: "weekly"
+      day: "friday" # rust releases are on thursdays
   - package-ecosystem: "cargo"
     directory: "/"
     allow:
