--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -69,6 +69,9 @@ default-features = false
 version = "~2.3.0"
 path = "../diesel_migrations/"
 
+[dependencies.diesel_infer_query]
+path = "../diesel_infer_query"
+
 [dev-dependencies]
 tempfile = "3.1.0"
 regex = "1.3.9"
