--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,6 @@ jobs:
         shell: bash
         if: matrix.rust == 'nightly'
         run: |
-          echo "RUSTFLAGS=--cfg doc_cfg" >> $GITHUB_ENV
           echo "RUSTDOCFLAGS=--cfg doc_cfg" >> $GITHUB_ENV
 
       - name: Set environment variables
@@ -363,7 +362,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@stable
         with:
-          components: "rust-src"
+          components: "rust-src, rustfmt"
       - name: Cache cargo registry
         uses: Swatinem/rust-cache@v2
         with:
@@ -395,7 +394,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@stable
         with:
-          components: "rust-src"
+          components: "rust-src, rustfmt"
       - name: Cache cargo registry
         uses: Swatinem/rust-cache@v2
         with:
@@ -438,7 +437,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@stable
         with:
-          components: "rust-src"
+          components: "rust-src, rustfmt"
       - name: Cache cargo registry
         uses: Swatinem/rust-cache@v2
         with:
