--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - master
+      - main
       - "0.[0-9]+.x"
       - "1.[0-9]+.x"
       - "2.[0-9]+.x"
@@ -30,7 +31,14 @@ jobs:
       matrix:
         rust: ["stable"]
         backend: ["postgres", "sqlite", "mysql"]
-        os: [ubuntu-latest, macos-13, macos-15, windows-2025, ubuntu-22.04-arm]
+        os:
+          [
+            ubuntu-latest,
+            macos-15-intel,
+            macos-15,
+            windows-2025,
+            ubuntu-24.04-arm,
+          ]
         include:
           - rust: "beta"
             backend: "postgres"
@@ -103,7 +111,7 @@ jobs:
           echo "MYSQL_UNIT_TEST_DATABASE_URL=mysql://root:root@127.0.0.1/diesel_unit_test" >> $GITHUB_ENV
 
       - name: Install postgres (MacOS)
-        if: (matrix.os == 'macos-13' || matrix.os == 'macos-15') && matrix.backend == 'postgres'
+        if: runner.os == 'macOS' && matrix.backend == 'postgres'
         run: |
           brew update
           brew install postgresql@14
@@ -119,8 +127,8 @@ jobs:
           HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install sqlite
           echo "SQLITE_DATABASE_URL=/tmp/test.db" >> $GITHUB_ENV
 
-      - name: Install mysql (MacOS)
-        if: matrix.os == 'macos-13' && matrix.backend == 'mysql'
+      - name: Install mysql (MacOS Intel)
+        if: matrix.os == 'macos-15-intel' && matrix.backend == 'mysql'
         run: |
           brew install mysql@8.4
           /usr/local/opt/mysql@8.4/bin/mysql.server start
