--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -34,11 +34,11 @@ futures-util = { version = "0.3", optional = true }
 criterion-perf-events = { version = "0.4", optional = true }
 perfcnt = { version = "0.8", optional = true }
 wtx = { default-features = false, features = [
+  "getrandom",
   "optimization",
-  "rand_chacha",
   "std",
-  "tokio",
-], optional = true, version = "0.34.0" }
+  "tokio"
+], optional = true, version = "0.38.0" }
 
 [dependencies.diesel-async]
 git = "https://github.com/weiznich/diesel_async"
