Add support for more expression types in diesel_infer_schema
This commit adds support for more expression types to
diesel_infer_schema. After this change we have limited support for wild
cards, function calls, binary operations and some special operations
like `BETWEEN` and `CASE WHEN`. This hopefully helps to infer slightly
more complex view definitions correctly. 

I still expect at least one or two other rounds of additions here to
support subqueries and more complicated constructs (CTE's, UNION's, etc) as well.

--- a/deny.toml
+++ b/deny.toml
@@ -10,7 +10,8 @@ allow = [
     "Apache-2.0 WITH LLVM-exception",
     "Unicode-3.0",
     "BSD-3-Clause",
-    "GPL-2.0"
+    "GPL-2.0",
+    "MPL-2.0",
 ]
 # ignore private packages
 private = { ignore = true }
