--- a/diesel_migrations/Cargo.toml
+++ b/diesel_migrations/Cargo.toml
@@ -19,6 +19,9 @@ path = "migrations_internals"
 version = "~2.3.0"
 path = "migrations_macros"
 
+[dependencies]
+tracing = { version = "0.1", optional = true, default-features = false }
+
 [dev-dependencies]
 dotenvy = "0.15"
 cfg-if = "1.0.0"
@@ -31,6 +34,7 @@ default-features = false
 
 [features]
 default = []
+tracing = ["dep:tracing"]
 sqlite = []
 postgres = []
 mysql = []
