Now `sqlite` feature is enabled when `returning_clauses_for_sqlite_3_35` is enabled

--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -88,7 +88,7 @@ ipnet-address = ["dep:ipnet", "dep:libc"]
 numeric = ["dep:num-bigint", "dep:bigdecimal", "dep:num-traits", "dep:num-integer", "diesel_derives/numeric"]
 postgres_backend = ["diesel_derives/postgres", "dep:bitflags", "dep:byteorder", "dep:itoa"]
 mysql_backend = ["diesel_derives/mysql", "dep:byteorder"]
-returning_clauses_for_sqlite_3_35 = []
+returning_clauses_for_sqlite_3_35 = ["sqlite"]
 i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
 r2d2 = ["diesel_derives/r2d2", "dep:r2d2"]
 chrono = ["diesel_derives/chrono", "dep:chrono"]
