Implemented `HasTable` for all things implementing Column

--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -33,6 +33,9 @@ proc-macro = true
 [[test]]
 name = "tests"
 
+[[test]]
+name = "test_associated_types"
+
 [features]
 default = []
 nightly = ["proc-macro2/nightly"]
