--- a/.github/workflows/track_benches.yml
+++ b/.github/workflows/track_benches.yml
@@ -30,22 +30,22 @@ jobs:
       UPPER_BOUNDARY: 1.0
     steps:
       - name: Download PR Benchmark Results
-        uses: dawidd6/action-download-artifact@v6
+        uses: dawidd6/action-download-artifact@ac66b43f0e6a346234dd65d4d0c8fbb31cb316e5 # v11
         with:
           name: ${{ env.PR_BENCHMARK_RESULTS }}
           run_id: ${{ github.event.workflow_run.id }}
       - name: Download Base Benchmark Results
-        uses: dawidd6/action-download-artifact@v6
+        uses: dawidd6/action-download-artifact@ac66b43f0e6a346234dd65d4d0c8fbb31cb316e5 # v11
         with:
           name: ${{ env.BASE_BENCHMARK_RESULTS }}
           run_id: ${{ github.event.workflow_run.id }}
       - name: Download GitHub Event
-        uses: dawidd6/action-download-artifact@v6
+        uses: dawidd6/action-download-artifact@ac66b43f0e6a346234dd65d4d0c8fbb31cb316e5 # v11
         with:
           name: ${{ env.GITHUB_EVENT }}
           run_id: ${{ github.event.workflow_run.id }}
       - name: Export GitHub Event Data
-        uses: actions/github-script@v6
+        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
         with:
           script: |
             let fs = require('fs');
@@ -56,7 +56,7 @@ jobs:
             core.exportVariable("PR_BASE", githubEvent.pull_request.base.ref);
             core.exportVariable("PR_BASE_SHA", githubEvent.pull_request.base.sha);
             core.exportVariable("PR_NUMBER", githubEvent.number);
-      - uses: bencherdev/bencher@main
+      - uses: bencherdev/bencher@2f1532643adc0e69e52acaec936d227ff14da24f # v0.5.9
       - name: Track PR Base Benchmarks
         run: |
           bencher run \
