--- a/.github/workflows/run_benches.yml
+++ b/.github/workflows/run_benches.yml
@@ -16,7 +16,9 @@ jobs:
         backend: ["postgres", "sqlite", "mysql"]
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v5
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          persist-credentials: false
 
       - name: Install postgres (Linux)
         if: matrix.backend == 'postgres'
@@ -58,7 +60,9 @@ jobs:
           echo 'DATABASE_URL=mysql://root:root@localhost/diesel_test' >> $GITHUB_ENV
 
       - name: Install rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
+        with:
+          toolchain: stable
 
       - name: Install critcmp
         run: cargo +stable install critcmp
@@ -67,28 +71,29 @@ jobs:
         run: cargo +stable bench --manifest-path diesel_bench/Cargo.toml --no-default-features --features "${{ matrix.backend }}" -- --save-baseline changes > pr_${{ matrix.backend }}.txt
 
       - name: Upload PR ${{ matrix.backend }} Benchmark Results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: pr_${{ matrix.backend }}.txt
           path: ./pr_${{ matrix.backend }}.txt
 
       - name: Checkout base branch
-        uses: actions/checkout@v5
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           ref: ${{ github.event.pull_request.base.sha }}
           repository: ${{ github.event.pull_request.base.repo.full_name }}
+          persist-credentials: false
 
       - name: Benchmark base ${{ matrix.backend }}
         run: cargo +stable bench --manifest-path diesel_bench/Cargo.toml --no-default-features --features "${{ matrix.backend }}" -- --save-baseline master > base_${{ matrix.backend }}.txt
 
       - name: Upload base ${{ matrix.backend }} Benchmark Results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: base_${{ matrix.backend }}.txt
           path: ./base_${{ matrix.backend }}.txt
 
       - name: Upload GitHub Event
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: event_${{ matrix.backend }}.json
           path: ${{ github.event_path }}
