--- a/deny.toml
+++ b/deny.toml
@@ -12,6 +12,7 @@ allow = [
     "BSD-3-Clause",
     "GPL-2.0",
     "MPL-2.0",
+    "Zlib",
 ]
 # ignore private packages
 private = { ignore = true }
