--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -24,8 +24,8 @@ include = [
 byteorder = { version = "1.0", optional = true }
 chrono = { version = "0.4.20", optional = true, default-features = false, features = ["clock", "std"] }
 libc = { version = "0.2.0", optional = true }
-mysqlclient-sys = { version = ">=0.2.5, <0.5.0",  optional = true }
-mysqlclient-src = { version = "0.1.0", optional = true }
+mysqlclient-sys = { version = ">=0.2.5, <0.6.0",  optional = true }
+mysqlclient-src = { version = ">=0.1.0, <0.3", optional = true }
 pq-sys = { version = ">=0.4.0, <0.8.0", optional = true }
 pq-src = { version = "0.3", optional = true }
 quickcheck = { version = "1.0.3", optional = true }
