--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -85,7 +85,7 @@ sqlite = ["diesel/sqlite"]
 mysql = ["diesel/mysql", "uses_information_schema"]
 sqlite-bundled = ["sqlite", "dep:libsqlite3-sys", "libsqlite3-sys/bundled"]
 postgres-bundled = ["postgres", "dep:pq-sys", "pq-sys/bundled", "dep:openssl-sys"]
-mysql-bundled = ["mysql", "dep:mysqlclient-sys", "mysqlclient-sys/bundled"]
+mysql-bundled = ["mysql", "dep:mysqlclient-sys", "mysqlclient-sys/bundled", "dep:openssl-sys"]
 uses_information_schema = []
 
 [[test]]
