--- a/examples/mysql/getting_started_step_1/Cargo.toml
+++ b/examples/mysql/getting_started_step_1/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 diesel = { version = "2.3.0", path = "../../../diesel", features = ["mysql"] }
 mysqlclient-sys = { workspace = true, features = ["bundled"] }
+openssl-sys = { workspace = true, features = ["vendored"] }
 dotenvy = "0.15"
 
 [dev-dependencies]
