Trying to run CI with SSL disabled for windows mysql

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,9 +200,9 @@ jobs:
           rm "C:/Strawberry/c/bin/doxygen.exe"
           echo "OPENSSL_RUST_USE_NASM=0" >> $GITHUB_ENV
           echo OPENSSL_SRC_PERL=C:/Strawberry/perl/bin/perl >> $GITHUB_ENV
-          echo "MYSQL_DATABASE_URL=mysql://root@127.0.0.1/diesel_test" >> $GITHUB_ENV
-          echo "MYSQL_EXAMPLE_DATABASE_URL=mysql://root@127.0.0.1/diesel_example" >> $GITHUB_ENV
-          echo "MYSQL_UNIT_TEST_DATABASE_URL=mysql://root@127.0.0.1/diesel_unit_test" >> $GITHUB_ENV
+          echo "MYSQL_DATABASE_URL=mysql://root@127.0.0.1/diesel_test?ssl_mode=DISABLED" >> $GITHUB_ENV
+          echo "MYSQL_EXAMPLE_DATABASE_URL=mysql://root@127.0.0.1/diesel_example?ssl_mode=DISABLED" >> $GITHUB_ENV
+          echo "MYSQL_UNIT_TEST_DATABASE_URL=mysql://root@127.0.0.1/diesel_unit_test?ssl_mode=DISABLED" >> $GITHUB_ENV
           echo "MYSQLCLIENT_LIB_DIR=C:\Program Files\MySQL\MySQL Server 8.0\lib" >> $GITHUB_ENV
           echo "MYSQLCLIENT_VERSION=8.0.40" >> $GITHUB_ENV
           echo "C:\Program Files\MySQL\MySQL Server 8.0\lib" >> $GITHUB_PATH
